fixed cropping on details page somewhat

--- a/src/pages/project_details/CareGuide.css
+++ b/src/pages/project_details/CareGuide.css
@@ -24,6 +24,7 @@
 .care-icon {
     height: 50px;
     width: 50px;
+    background-size: 50px 50px;
     border-radius: 50%;
     background-color: #464646
 }
