--- a/src/pages/project_details/Plants.css
+++ b/src/pages/project_details/Plants.css
@@ -28,6 +28,7 @@
 .plant-pic {
     height: 100px;
     width: 100px;
+    background-size: 100px 100px;
     border-radius: 50%;
     display: inline-block;
 }
