--- a/src/pages/project_details/UserPhotos.css
+++ b/src/pages/project_details/UserPhotos.css
@@ -1,4 +1,5 @@
 #UserPhotos {
+    margin-top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -12,6 +13,7 @@
 .photo {
     height: 300px;
     width: 300px;
+    background-size: 300px;
     background-color: #bbb;
 }
 
@@ -27,6 +29,7 @@
     align-self: center;
     height: 40px;
     width: 40px;
+    background-size: 40px 40px;	
     border-radius: 50%;
     background-color: #464646;
 }
